--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,14 +1,14 @@
 {
   "site": {
-    "title": "Bookworm Light Astro | Blog Template",
+    "title": "Compound PK",
     "base_url": "https://bookworm-light-astro.vercel.app",
     "base_path": "/",
     "trailing_slash": false,
-    "favicon": "/images/favicon.png",
-    "logo": "/images/logo.png",
-    "logo_width": "200",
-    "logo_height": "34",
-    "logo_text": "Bookworm Light"
+    "favicon": "/images/site-favicon-20260224-v2.svg?v=2",
+    "logo": "/images/site-logo-20260224.svg",
+    "logo_width": "250",
+    "logo_height": "60",
+    "logo_text": "Compound PK"
   },
 
   "settings": {
@@ -16,9 +16,9 @@
   },
 
   "metadata": {
-    "meta_author": "Themefisher",
-    "meta_image": "/images/og-image.png",
-    "meta_description": "Bookworm Light Astro Blog Template"
+    "meta_author": "Compound PK",
+    "meta_image": "/images/site-logo-20260224.svg",
+    "meta_description": "Long-term investing, simplified. Practical investing strategies for Pakistanis pursuing financial independence."
   },
 
   "google_tag_manager": {
@@ -28,7 +28,7 @@
 
   "params": {
     "contact_form_action": "#",
-    "copyright": "Copyright © 2025 a theme by [Themefisher](https://themefisher.com)"
+    "copyright": "Copyright © 2026 Compound PK. All rights reserved."
   },
 
   "contactinfo": {
