chore: remove vercel adapter and cleanup project
- Remove `@astrojs/vercel` dependency and adapter configuration
- Rewrite README.md with project details and standard commands
- Update site base URL and ignore local tooling files
- Remove unused placeholder image assets

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,6 @@ package-lock.json
 # ignore .astro directory
 .astro
 
-# vercel metadata
-.vercel
+# local editor and tooling
+.vscode/
+codex-skills/
