feat(contact): redesign page and enable formspree
Remove static contact information section from UI and config.
Configure form action URL and add validation attributes.
Update navigation menu labels and simplify page layout.

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -27,13 +27,7 @@
   },
 
   "params": {
-    "contact_form_action": "#",
+    "contact_form_action": "https://formspree.io/f/mqedwbgl",
     "copyright": "Copyright © 2026 Compound PK. All rights reserved."
-  },
-
-  "contactinfo": {
-    "address": "355 S Grand Ave <br/> Los Angeles, CA 90071",
-    "email": "info@bookworm.org",
-    "phone": "+800 567 1234"
   }
 }
